package app;

public class DependencyInjector {
}
