package app.data.model;

public class Book extends Entity {
}
