package app.data.model;

public class Entity {
}
