package app.data.model;

public class Loan extends Entity {
}
