package app.data.model;

public class Student extends Entity{
}
