package app.data.model;

public class Subject extends Entity {
}
