package app.data.presentation.cli;

public interface Command {
}
