package app.data.presentation.cli;

public class CommandLineInterface {
}
