package app.data.presentation.cli.commands;

import app.data.presentation.cli.Command;

public class Help implements Command {
}
