package app.data.presentation.view;

public class View {
}
