package app.repositories;

import app.data.model.Book;

public interface BookRepository extends GenericRepository<Book> {
}
