package app.repositories;

import app.data.model.Entity;

public interface GenericRepository<T extends Entity> {
}
