package app.repositories;

import app.data.model.Loan;

public interface LoanRepository extends GenericRepository<Loan> {
}
