package app.services;

public class BookService implements GenericService {
}
