package app.services;

import app.data.model.Entity;

public interface GenericService<T extends Entity> {
}
