package app.services;

public class StudentService implements GenericService {
}
