package app.services;

public class SubjectService implements GenericService {
}
