package es.upm.da.etsisi.DABiblioteca;

public class App {

    public static void main(String[] args) {
        DependencyInjector.getInstance().run(args);
    }

}
